playlist/cue/parser: fix off-by-one buffer overflow
cue_next_word() can return a pointer one past the end of the string if
the word is followed by the terminating null byte.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ ver 0.22.1 (not yet released)
 * output
   - alsa: don't deadlock when the ALSA driver is buggy
   - jack, pulse: reduce the delay when stopping or pausing playback
+* playlist
+  - cue: fix crash bug
 
 ver 0.22 (2020/09/23)
 * protocol
